# GF3

math/: .WolframResources  .project
math/GF3/: GF3.m
math/GF3/Kernel/: init.m
math/data/: discrepancy_refs_Owen_GF2.h  discrepancy_refs_Owen_GF3.h  discrepancy_refs_Owen_GF5.h
src/: CMakeLists.txt  blueNoisePipeline.sh  cascadedSobol.cpp  iterateCheckerStrat.sh  otCostCompare.cpp  otDistanceMatrix.cpp
src/Discrepancy/: Discrepancy.h
src/Integration/: Cont2D.cpp  Gauss1D.cpp  Gauss2D.cpp  GaussIso2D.cpp  Gaussians.h  HeaviBell2D.cpp  HeaviCont2D.cpp  HeaviGauss2D.cpp  Integration.h  Integration_quadPrecision.h  Smooth2D.cpp  Smooth3D.cpp  Smooth4D.cpp  SmoothBump2D.cpp  viewGaussian.cpp
src/Optimization/: CMakeLists.txt  generateRandomSeedTile.cpp  optimizeScreenSpace2D.cpp  optimizeScreenSpacenD.cpp
src/Points/: mapping.cpp  mapping.h
src/Samplers/: BlueTile.h  OwenNDHelper.h  SobolCascade.h  myMath.cpp  myMath.h
src/Screenspace/: CMakeLists.txt  demoOwenPlus2D.cpp  generateScreenspaceLaurent.cpp  generateScreenspaceSobol++.cpp  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_2d2d2d2d_128spp.hpp  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_2d2d2d2d_16spp.hpp  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_2d2d2d2d_1spp.hpp  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_2d2d2d2d_256spp.hpp  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_2d2d2d2d_2spp.hpp  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_2d2d2d2d_32spp.hpp  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_2d2d2d2d_4spp.hpp  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_2d2d2d2d_64spp.hpp  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_2d2d2d2d_8spp.hpp  testSamplerScreenspaceLaurent.cpp  testTileGaussian.cpp
src/Screenspace/ZSampler/: ZTSequence.cpp  main.cpp  z.cpp  z.h  zcommon.h  zhash.cpp  zhash.h  zpp.cpp  zpp.h  ztools.h
src/Screenspace/tests_screenspace/: CMakeLists.txt  integrationErrorPerPixel.cpp
src/Stats/: Stats.h
src/TestSamplersND/: CMakeLists.txt  morton.txt  plot_morton.txt  pointsOutput.cpp  testIntegrationND.cpp  testRank.cpp
src/Tools/: io.h  my_utility.cpp  my_utility.h
src/Transport/: NBallRadonManager.cpp  NBallRadonManager.h  SlicedOptimalTransportNBall.h  Wasserstein.cpp  Wasserstein.h  network_simplex_simple.h
src/gk2path6d/: CMakeLists.txt  cornell-blue.txt  cornell-morton.txt  cornell-sobolpp-labo.txt  cornell-test-good.txt  cornell512.txt  cornell_readme.txt  premake4.lua  readme.md
src/gk2path6d/cornell/: cornell1-sobol-00004.pfm  cornell1-sobol-00016.pfm
src/gk2path6d/data/: mask.pfm
src/gk2path6d/data/shaders/: mesh.glsl  tonemap.glsl
src/gk2path6d/path/: blue.cpp  brdf.h  bvh.cpp  bvh.h  bvh_builder.cpp  bvh_builder.h  camera.h  directions.h  framebuffer.cpp  framebuffer.h  main.cpp  materials.cpp  materials.h  options.h  points.h  rank4d.cpp  ray.h  sampler.h  sampler_morton.h  sampler_nd.h  sampler_s19.cpp  sampler_s19.h  sampler_sobol.h  sampler_sobolpp.h  sampler_zpp_sampler.h  sampler_zsampler.h  scene.cpp  scene.h  sobol_spack.cpp  sobol_spack.h  source.h  stbvh.cpp  stbvh.h  stbvh_builder.cpp  stbvh_builder.h  texturelib.cpp  texturelib.h  tile.cpp  triangle.h
src/gk2path6d/scenes/: balls_scene.txt  bigguy_orbiter.txt  bigguy_scene.txt  cornell.mtl  cornell.txt  cornell3_bars.mtl  cornell3_bars.obj.materials  cornell3_bars.obj.mesh  cornell3_orbiter.txt  cornell3_sphere2_03.mtl  cornell3_sphere2_05.obj.mesh  cornell3_sphere2_06.obj.materials  cornell3_sphere2_06.obj.mesh  cornell3_sphere2_07.obj.mesh  cornell3_sphere2_08.obj.mesh  cornell3_sphere2_09.obj.mesh  cornell3_sphere2_10.obj.mesh  cornell3_sphere2_11.obj.mesh  cornell_lens.txt  materials.mtl  spheres_scene.txt  vo_tst_camera.txt  vo_tst_lens.txt  vo_tst_scene.txt
src/gk2path6d/scenes/balls/: balls_lens.txt  balls_orbiter.txt  scene.mtl
src/gk2path6d/src/: errors.cpp  grid.cpp  hdrtopng.cpp  image_viewer.cpp  llsq.hpp  rank_viewer.cpp  scene_viewer.cpp  seeds.cpp  shader_kit.cpp  stats.cpp
src/gk2path6d/src/colormaps/: colormapDarkRainbow.h  colormapGrayYellowTones.h  colormapLightTemperatureMap.h  colormapRoseColors.h  colormapSunsetColors.h  colormapTemperatureMap.h  colormapThermometerColors.h
src/gk2path6d/src/gKit/: app.cpp  app.h  color.cpp  color.h  draw.h  gamepads.cpp  gamepads.h  image.h  image_exr.cpp  image_exr.h  image_hdr.cpp  image_io.cpp  image_io.h  mat.cpp  mat.h  material.h  mesh.cpp  mesh.h  mesh_buffer.cpp  mesh_buffer.h  mesh_cache.cpp  mesh_cache.h  orbiter.cpp  orbiter.h  program.cpp  real.h  rgbe.cpp  text.cpp  uniforms.cpp  uniforms.h  vec.cpp  vec.h  wavefront.cpp  wavefront.h  window.cpp  window.h
src/includes/: SeedTileHelper.hpp
src/pcg32-demo/: pcg32-demo.cpp
src/save/: bad-checkerStrat2D.cpp  checkerStrat2D.cpp  save-checkerStrat2D.cpp  sobol+owen.hpp
src/vo_tools/: .cproject  .project  CMakeLists-in2p3.txt  CMakeLists-old.txt  CMakeLists.txt  barycenterFromPts.cpp  checkerStrat2D.cpp  checkerStrat4D.cpp  checkerStrat5D.cpp  checkerStratND.cpp  demoCascadedSobol.cpp  findGoodScreenSpaceSeeds.cpp  getDV4UniformND.cpp  getExtensibleLattice2D.cpp  getExtensibleLattice3D.cpp  getExtensibleLattice4D.cpp  getExtensibleLattice6D.cpp  getGeneralizedL2Discrepancy_from_file.cpp  getUniformNDdiscrepancy.cpp  getUniformNDpts.cpp  integrateND_from_file.cpp  integrateSobolPlusPlusND.cpp  owen.cpp  sobol_init_tab_joe_kuo.h
